--- a/projects/memento/src/app/layout/main-layout.component.html
+++ b/projects/memento/src/app/layout/main-layout.component.html
@@ -1,7 +1,10 @@
 <mat-toolbar class="fixed shadow-lg">
   <button mat-button class="logo">🔥 Memento</button>
-  <a mat-button routerLink="home">Home</a>
-  <a mat-button routerLink="digest">Digest</a>
+  @for (route of hostilesRoute(); track route) {
+    <a mat-button [routerLink]="route.path" routerLinkActive="is-active">
+      {{ route.title }}
+    </a>
+  }
 
   <span class="fill-space"></span>
 </mat-toolbar>
@@ -9,12 +12,32 @@
 <main class="container mt-16 p-0 flex flex-1">
   @if (isDigestPage()) {
     <section class="px-2 pt-10 w-2/12 bg-slate-50">
-      <mat-nav-list>
-        <a mat-list-item routerLink="digest/digest-create">Create</a>
-        <a mat-list-item routerLink="digest/digest-list">List</a>
-        <a mat-list-item routerLink="digest/digest-stat">Stat</a>
-        <a mat-list-item routerLink="digest/digest-detail">Detail</a>
-      </mat-nav-list>
+      @if (layout() === 'XSmall') {
+        <div class="flex flex-col items-center">
+          @for (route of digestChildrenRoute(); track route) {
+            <a
+              class="mt-2"
+              mat-icon-button
+              [routerLink]="'digest/' + route.path"
+              routerLinkActive="is-active"
+            >
+              <mat-icon>{{ route.icon }}</mat-icon>
+            </a>
+          }
+        </div>
+      } @else {
+        <mat-nav-list>
+          @for (route of digestChildrenRoute(); track route) {
+            <a
+              mat-list-item
+              [routerLink]="'digest/' + route.path"
+              routerLinkActive="is-active"
+            >
+              {{ route.title }}
+            </a>
+          }
+        </mat-nav-list>
+      }
     </section>
     <section class="p-10 w-10/12">
       <router-outlet />
