--- a/projects/memento/src/app/layout/main-layout.component.scss
+++ b/projects/memento/src/app/layout/main-layout.component.scss
@@ -5,3 +5,13 @@
 footer {
   background-color: #fdfdf5;
 }
+
+.is-active {
+  background-color: #dfdddd;
+}
+
+.mdc-icon-button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
