--- a/projects/memento/src/app/layout/main-layout.component.html
+++ b/projects/memento/src/app/layout/main-layout.component.html
@@ -11,12 +11,12 @@
 
 <main class="container mt-16 p-0 flex flex-1">
   @if (isDigestPage()) {
-    <section class="px-2 pt-10 w-1/12 bg-slate-50">
+    <section class="w-1/12 bg-slate-50">
       @if (['XSmall', 'Small', 'Medium'].includes(layout() ?? '')) {
-        <div class="flex flex-col items-center mt-10">
+        <div class="flex flex-col items-center">
           @for (route of digestChildrenRoute(); track route) {
             <a
-              class="mt-2"
+              class="mt-10"
               mat-icon-button
               [routerLink]="'digest/' + route.path"
               routerLinkActive="is-active"
@@ -29,6 +29,7 @@
         <mat-nav-list>
           @for (route of digestChildrenRoute(); track route) {
             <mat-list-item
+              class="mt-10"
               [routerLink]="'digest/' + route.path"
               routerLinkActive="is-active"
             >
